<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AddExercises">

    <LinearLayout
        android:id="@+id/list_exercises"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:text="@string/add_workout_program"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/workout_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:autofillHints="name"
            android:hint="@string/name_of_workout"
            android:inputType="text"
            android:text="@string/default_name"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:text="@string/micro_cycles_weeks"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/micro_cycles"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:inputType="number"
                android:hint="@string/number_of_cycles"
                android:textAlignment="center"
                android:text="@string/default_cycle"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_exercise"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/add_exercise"
                android:textColor="#263238" />

            <Button
                android:id="@+id/save_workout"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/save"
                android:textColor="#263238" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>